# advent-of-code-2024

./: Cargo.toml  Makefile  README.md
day-1-historian-histerya/: Cargo.toml
day-1-historian-histerya/benches/: benchmark.rs
day-1-historian-histerya/src/: part1.rs  part2.rs
day-2-red-nosed-reports/: Cargo.toml
day-2-red-nosed-reports/benches/: benchmark.rs
day-2-red-nosed-reports/src/: part1.rs  part2.rs
day-3-mull-it-over/: Cargo.toml
day-3-mull-it-over/benches/: benchmark.rs
day-3-mull-it-over/src/: part1.rs  part2.rs
template/: Cargo.toml
template/benches/: benchmark.rs
template/src/: part2.rs
